fixed spacing issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,13 +28,14 @@
 
 .flex-container {
     width: 100%;
-    height: 100%;
+    height: 75%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
 .searched {
+    padding-top: 10px;
     font-size: 2em;
     color: white;
     text-align: center;
